tests/reject/unnamed_rule_premise.alg
rule r(A : Prop)
  ⊢ A
  ─────
  ⊢ A
end;
